--- a/src/app/Home.form
+++ b/src/app/Home.form
@@ -48,17 +48,12 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jButton1" alignment="0" min="-2" pref="202" max="-2" attributes="0"/>
-                                  <Component id="jButton2" min="-2" pref="202" max="-2" attributes="0"/>
-                                  <Component id="jButton3" min="-2" pref="202" max="-2" attributes="0"/>
-                                  <Component id="jButton4" min="-2" pref="202" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="jButton5" min="-2" pref="93" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
-                              </Group>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jButton1" alignment="0" min="-2" pref="202" max="-2" attributes="0"/>
+                              <Component id="jButton2" min="-2" pref="202" max="-2" attributes="0"/>
+                              <Component id="jButton3" min="-2" pref="202" max="-2" attributes="0"/>
+                              <Component id="jButton4" min="-2" pref="202" max="-2" attributes="0"/>
+                              <Component id="jButton5" alignment="0" min="-2" pref="93" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       </Group>
@@ -86,9 +81,9 @@
                   <Component id="jButton3" min="-2" pref="52" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Component id="jButton4" min="-2" pref="52" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="57" max="32767" attributes="0"/>
                   <Component id="jButton5" min="-2" pref="36" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               </Group>
               <Component id="jScrollPane2" alignment="1" pref="0" max="32767" attributes="0"/>
           </Group>
@@ -223,6 +218,9 @@
                                           <Component id="jButton7" min="-2" pref="51" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="jPanel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jScrollPane3" pref="570" max="32767" attributes="0"/>
+                                          <Component id="chartJPanel" alignment="0" max="32767" attributes="0"/>
                                           <Group type="102" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
                                                   <Group type="102" alignment="0" attributes="0">
@@ -236,9 +234,6 @@
                                               </Group>
                                               <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="jPanel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jScrollPane3" pref="570" max="32767" attributes="0"/>
-                                          <Component id="chartJPanel" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -250,19 +245,16 @@
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                                   <Component id="jLabel1" min="-2" pref="41" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="total" min="-2" pref="38" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="chartJPanel" min="-2" max="-2" attributes="0"/>
